| Summary: | ASTERISK-25396: chan_sip: Extremely long callerid name causes invalid SIP | ||
| Reporter: | Walter Doekes (wdoekes) | Labels: | |
| Date Opened: | 2015-09-17 04:14:33 | Date Closed: | 2015-09-19 08:33:07 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/Interoperability |
| Versions: | 11.19.0 13.5.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Example:
{noformat} *CLI> channel originate Local/s@default application Wait 10 ... Reliably Transmitting (no NAT) to 1.2.3.4:5060: INVITE sip:johndoe@1.2.3.4 SIP/2.0 Via: SIP/2.0/UDP 10.101.10.156:5060;branch=z9hG4bK666145d9 Max-Forwards: 70 From: "AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDD To: <sip:johndoe@1.2.3.4> Contact: <sip:123456789@10.101.10.156:5060> Call-ID: 2764d24c65faae38254ffbbf44f326c9@10.101.10.156:5060 CSeq: 102 INVITE User-Agent: Asterisk PBX GIT-11-3cf0f29 Date: Thu, 17 Sep 2015 09:07:27 GMT Allow: INVITE, ACK, CANCEL, OPTIONS, BYE, REFER, SUBSCRIBE, NOTIFY, INFO, PUBLISH, MESSAGE Supported: replaces, timer Remote-Party-ID: "AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB" <sip:123456789@10.101.10.156>;party=calling;privacy=off;screen=no Content-Type: application/sdp Content-Length: 319 {noformat} That is: *From: "AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDD* (eol) Steps to reproduce: {noformat} [modules] autoload=no load => res_clioriginate.so load => res_rtp_asterisk.so load => chan_sip.so load => chan_local.so load => app_dial.so load => func_callerid.so load => pbx_config.so {noformat} {noformat} [default] exten => s,1,NoOp same => n,Set(CALLERID(num)=123456789) same => n,Set(CALLERID(name)=AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF ) same => n,Set(CALLERID(name)=${CALLERID(name)} AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF ) same => n,Set(CALLERID(name)=${CALLERID(name)} AAAAAAAAAAAAAAA BBBBBBBBBBBBBBB CCCCCCCCCCCCCCC DDDDDDDDDDDDDDD EEEEEEEEEEEEEEE FFFFFFFFFFFFFFF ) same => n,Dial(SIP/johndoe@1.2.3.4) {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-09-17 04:14:35.187-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2015-09-17 07:41:09.856-0500 Thanks Walter! | ||